manifests/namespace-security.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testns
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
