manifests/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuln-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vuln-server
  template:
    metadata:
      labels:
        app: vuln-server
    spec:
      containers:
      - name: server
        image: vuln-server:1.0
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: vuln-server-service
spec:
  selector:
    app: vuln-server
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
